# mini-llm-serving

./: .clinerules  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.ai/: ARCHITECTURE.md  BUILD_GUIDE.md  CODE_REVIEW.md  context.md  style.md  tasks.md
.github/workflows/: ci.yml
scripts/: generate_metrics_report.py  run_load_test.sh
src/llm_serving/: config.py  exceptions.py  lifecycle.py  logging.py  main.py
src/llm_serving/api/: memory_router.py  router.py  schemas.py
src/llm_serving/core/: batcher.py  circuit_breaker.py  inference.py  kv_cache.py  streaming.py  worker.py
src/llm_serving/middleware/: __init__.py  error_handler.py  load_shedder.py  rate_limit.py
src/llm_serving/models/: loader.py
src/llm_serving/profiler/: __init__.py  config.py  memory_estimator.py  pressure.py  tracker.py  watermark.py
src/llm_serving/queue/: __init__.py  priority_queue.py  rate_limiter.py  redis_client.py
src/llm_serving/speculative/: __init__.py  config.py  draft_runner.py  metrics.py  orchestrator.py  sampler.py  verifier.py
tests/: conftest.py  test_api.py  test_batcher.py  test_circuit_breaker.py  test_config.py  test_error_handler.py  test_inference.py  test_integration_redis.py  test_kv_cache.py  test_loader.py  test_logging.py  test_middleware.py  test_priority_queue.py  test_profiler.py  test_rate_limiter.py  test_redis_client.py  test_speculative.py  test_streaming.py
tests/load/: __init__.py  locustfile.py
